--- a/generateApp/admin_app/views/invoice.ejs
+++ b/generateApp/admin_app/views/invoice.ejs
@@ -164,7 +164,7 @@
         </div>
         
       </div>
-      <div class="footer_a4 d-flex justify-content-around">
+      <div class="footer_a4 d-flex justify-content-around" style="margin-top: 2%">
         <h6>Signature Fournisseur</h6>
         <h6>Signature Client</h6>
       </div>
