--- a/generateApp/admin_app/views/login.ejs
+++ b/generateApp/admin_app/views/login.ejs
@@ -76,7 +76,7 @@
         </div>
     </div><!-- scripts -->
     <div class="sa-app__footer d-block d-md-flex"><!-- copyright --> Admin 2023<div class="m-auto"></div>
-    <div>Design by <a href="https://blackconcept-dev.com">Black Concept</a></div>
+    <div>Design by <a href="https://www.icosnet.com">Icosnet</a></div>
     <!-- copyright / end -->
   </div><!-- sa-app__footer / end -->
   </div><!-- sa-app__content / end --><!-- sa-app__toasts -->
