--- a/generateApp/client_app/views/layout/footer.ejs
+++ b/generateApp/client_app/views/layout/footer.ejs
@@ -35,7 +35,7 @@
 				<div class="col-md-8 col-xs-12">
 					<div class="footer">
 						<div class="logo" style="margin-bottom: 5%;">
-							<img src="/assets/img/logo1.png" alt="" width="200">
+							<img src="/assets/img/logo1.png" alt="literie d'amour" width="200">
 						</div>
 
 						<ul class="footer-links">
