--- a/generateApp/client_app/views/layout/header.ejs
+++ b/generateApp/client_app/views/layout/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,15 @@
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 		<title>Literie d'amour</title>
+		
+		<meta property="og:title" content="Literie d'amour Décoration d’intérieur" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.literiedamour.dz" />
+        <meta property="og:image" content="/assets/img/icon.png" />
+
+        <meta name="description" content="Literie d'amour Décoration d’intérieur …">
+
+        <meta name="keywords" content="Literie d'amour Décoration d’intérieur, Algérie, Lit, Matelas, Housse, Couette, Couverture">
 
 		<link rel="shortcut icon" type="image/x-icon" href="/assets/img/icon.png">
 
@@ -28,6 +37,8 @@
 
 		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="/assets/css/style.css"/>
+		
+		<meta property="og:site_name" content="literiedamour.dz">
 
     </head>
 	<body>
@@ -41,6 +52,9 @@
 								<li><a href="tel:+213561446414"><i class="fa fa-phone"></i> 0561446414</a></li>
 								<li><a href="mailto:contact@literiedamour.dz"><i class="fa fa-envelope-o"></i> contact@literiedamour.dz</a></li>
 								<li><a href="https://maps.app.goo.gl/KbpANepKFsNSBQgf8" target="_blank"><i class="fa fa-map-marker"></i> Rue 20 aout commune bordj bahri </a></li>
+								<li><a>NIF : 19116060050318704200</a> </li>
+								<li><a>RC : 42/00-2668329A22 </a> </li>
+								
 							</ul>
 							
 							<ul class="header-links pull-right">
@@ -126,7 +140,8 @@
 													<h5 id="totalCart_drop"></h5>
 												</div>
 												<div class="cart-btns">
-													<a href="/cart" style="width: 100%;">Voir panier</a>
+													<a href="/cart">Voir panier</a>
+													<a style="cursor: pointer;" class="myBtnValid_drop">Valider  <i class="fa fa-arrow-circle-right"></i></a>
 												</div>
 											</div>
 										</div>
