--- a/generateApp/client_app/views/product_details.ejs
+++ b/generateApp/client_app/views/product_details.ejs
@@ -39,7 +39,7 @@
 						%>
 
 						<div class="product-preview">
-							<img src="/img/product/<%= product[0].product_id %>/<%= img_name %>.jpg" alt="" style="height: 100%; max-height: 480px; min-height: 320px;">
+							<img src="/img/product/<%= product[0].product_id %>/<%= img_name %>.jpg" alt="literie d'amour" style="height: 100%; max-height: 480px; min-height: 320px;">
 						</div>
 
 						<%}%>
@@ -59,7 +59,7 @@
 						%>
 
 						<div class="product-preview">
-							<img src="/img/product/<%= product[0].product_id %>/<%= img_name %>.jpg" alt="" style="max-height: 100px; height: 100%;">
+							<img src="/img/product/<%= product[0].product_id %>/<%= img_name %>.jpg" alt="literie d'amour" style="max-height: 100px; height: 100%;">
 						</div>
 
 						<%}%>
@@ -229,7 +229,7 @@
 									<!-- product -->
 									<div class="product">
 										<div class="product-img">
-											<img src="/img/product/<%= product_similar[i].product_id %>/main.jpg" alt="" style="max-height: 280px;">
+											<img src="/img/product/<%= product_similar[i].product_id %>/main.jpg" alt="literie d'amour" style="max-height: 280px;">
 											<div class="product-label">
 												<!-- 	<span class="sale">-30%</span> -->
 												<span class="new">NEW</span>
