--- a/generateApp/client_app/views/products_list.ejs
+++ b/generateApp/client_app/views/products_list.ejs
@@ -166,7 +166,7 @@
 								<div class="col-md-3 col-xs-6">
 									<div class="product">
 										<div class="product-img text-center">
-											<img src="/img/product/<%= products[i].product_id %>/main.jpg" alt="" class="img-mobile-prod"
+											<img src="/img/product/<%= products[i].product_id %>/main.jpg" alt="literie d'amour" class="img-mobile-prod"
 												style="width: 100%; height: 200px; padding: 10px;">
 										</div>
 										<div class="product-body">
