--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -235,19 +235,17 @@
 										<% } %>
 										<!-- /product -->
 									</div>
-
-
 									<div class="col-4 col-lg-4 col-sm-4 col-md-4 mobile-col row">
 										<div class=" col-12 mobile-col">
 											<div class="product-img text-center ">
 												<video src="./img/video/1.mp4" style="width: 100%;padding: 1%; max-width: 480px;" class="mobile-none video-mobile"
-													alt="video" autoplay muted></video>
+													alt="video" autoplay controls></video>
 											</div>
 										</div>
 										<div class=" col-12 mobile-col" >
 											<div class="product-img text-center">
 												<video src="./img/video/2.mp4" style="width: 100%;padding: 1%; max-width: 480px;" class="video-mobile"
-													alt="video" autoplay muted></video>
+													alt="video" autoplay controls></video>
 											</div>
 										</div>
 									
