--- a/generateApp/admin_app/views/category_list.ejs
+++ b/generateApp/admin_app/views/category_list.ejs
@@ -25,8 +25,6 @@
                         <tr>
                             <th>Image</th>
                             <th class="min-w-15x">Nom</th>
-                            <th>Article</th>
-                            <th></th>
                             <th class="w-min" data-orderable="false"></th>
                         </tr>
                     </thead>
@@ -43,9 +41,7 @@
                                 <img src="/img/category/<%= category[i].cat_id %>/main.jpg" width="40" height="40"
                                     alt="" />
                             </div></td>
-                            <td class="text-reset"><%= category[i].cat_name %></td>
-                            <td><%= category[i].product_count %></td>
-                            <td><a href="/details/list?cat=<%= category[i].cat_id %>" class="btn btn-dark">Détails <i class='fas fa-file-alt ms-2'></i></a></td>
+                            <td class="text-reset"><a href="/sub_category/list?cat=<%= category[i].cat_id %>"><%= category[i].cat_name %></a></td>
                             <td>
                                 <div class="dropdown"><button class="btn btn-sa-muted btn-sm" type="button"
                                         id="category-context-menu-0" data-bs-toggle="dropdown" aria-expanded="false"
