--- a/generateApp/admin_app/views/sub_category_list.ejs
+++ b/generateApp/admin_app/views/sub_category_list.ejs
@@ -5,16 +5,16 @@
             <div class="py-5">
                 <div class="row g-4 align-items-center">
                     <div class="col">
-                        <h1 class="h3 m-0">Catégories</h1>
+                        <h1 class="h3 m-0">Sous-catégories</h1>
                     </div>
-                    <div class="col-auto d-flex"><a href="/sub_category/add" class="btn btn-primary">Ajouter une catégorie</a></div>
+                    <div class="col-auto d-flex"><a href="/sub_category/add" class="btn btn-primary">Ajouter une sous-catégorie</a></div>
                 </div>
             </div>
             <div class="card">
                 <div class="p-4"><input type="text" placeholder="Rechercher..."
                         class="form-control form-control--search mx-auto" id="table-search" /></div>
                 <% if (typeof(err) != "undefined" && err != null && err == 1) { %>
-                    <div class="alert alert-danger ms-4 me-4" role="alert">Echec de suppression de la catégorie !</div>
+                    <div class="alert alert-danger ms-4 me-4" role="alert">Echec de suppression de la sous-catégorie !</div>
                 <% } else if (typeof(err) != "undefined" && err != null && err == 0) { %>
                     <div class="alert alert-success ms-4 me-4" role="alert">Succées !</div>
                 <% } %>  
@@ -25,6 +25,7 @@
                         <tr>
                             <th>Image</th>
                             <th class="min-w-15x">Nom</th>
+                            <th>Catégorie</th>
                             <th>Article</th>
                             <th></th>
                             <th class="w-min" data-orderable="false"></th>
@@ -44,6 +45,7 @@
                                     alt="" />
                             </div></td>
                             <td class="text-reset"><%= sub_category[i].sub_cat_name %></td>
+                            <td class="text-reset"><%= sub_category[i].cat_name %></td>
                             <td><%= sub_category[i].product_count %></td>
                             <td><a href="/details/list?cat=<%= sub_category[i].sub_cat_id %>" class="btn btn-dark">Détails <i class='fas fa-file-alt ms-2'></i></a></td>
                             <td>
