--- a/generateApp/admin_app/views/layouts/nav.ejs
+++ b/generateApp/admin_app/views/layouts/nav.ejs
@@ -52,14 +52,14 @@
                   </a>
                 </li>
 
-                <li class="sa-nav__menu-item sa-nav__menu-item--has-icon">
+       <!--          <li class="sa-nav__menu-item sa-nav__menu-item--has-icon">
                   <a href="/brands/list" class="sa-nav__link">
                   <span class="sa-nav__icon">
                     <i class="fas fa-receipt"></i>
                   </span>
                   <span class="sa-nav__title">Marques</span>
                   </a>
-                </li>
+                </li> -->
 
                 <li class="sa-nav__menu-item sa-nav__menu-item--has-icon">
                   <a href="/orders/list" class="sa-nav__link">
