add order delete

--- a/generateApp/admin_app/views/orders_list.ejs
+++ b/generateApp/admin_app/views/orders_list.ejs
@@ -60,6 +60,7 @@
                                         </svg></button>
                                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="order-context-menu-0">
                                         <li><a class="dropdown-item" href="/order/<%= orders[i].order_id %>/details">Détails</a></li>
+                                        <li><a class="dropdown-item" href="/order/<%= orders[i].order_id %>/delete">Supprimer</a></li>
                                         <li>
                                             <hr class="dropdown-divider" />
                                         </li>
