--- a/generateApp/admin_app/views/details_list.ejs
+++ b/generateApp/admin_app/views/details_list.ejs
@@ -29,7 +29,7 @@
                 <thead>
                     <tr>                   
                         <th class="min-w-15x">Nom</th>
-                        <th>Catégorie</th>                   
+                        <th>Sous-catégorie</th>                   
                         <th class="w-min" data-orderable="false"></th>
                     </tr>
                 </thead>
