--- a/generateApp/admin_app/views/product_edit.ejs
+++ b/generateApp/admin_app/views/product_edit.ejs
@@ -245,10 +245,18 @@
                                 <div class="mb-5">
                                     <h2 class="mb-0 fs-exact-18">Catégorie*</h2>
                                 </div><select class="sa-select2 form-select" name="product_category" required>
-                                    <% if (typeof(sub_category) !== 'undefined' && sub_category != null && sub_category.length > 0) { %>
-                                    <% for (var i = 0; i < sub_category.length; i++){ %>
-                                    <option <%= sub_category[i].sub_cat_id == product[0].sub_cat_id ? "selected" : "" %> value="<%= sub_category[i].sub_cat_id %>"><%= sub_category[i].sub_cat_name %></option>
+                                    <% if (typeof(category) !== 'undefined' && category != null && category.length > 0) { %>
+                                    <% for (var i = 0; i < category.length; i++){ %>
+                                    <option <%= category[i].cat_id == product[0].cat_id ? "selected" : "" %> value="<%= category[i].cat_id %>"><%= category[i].cat_name %></option>
                                     <% }} %>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="card w-100">
+                            <div class="card-body p-5">
+                                <div class="mb-5">
+                                    <h2 class="mb-0 fs-exact-18">Sous-catégorie</h2>
+                                </div><select disabled class="sa-select2 form-select" multiple name="product_sub_cat">
                                 </select>
                             </div>
                         </div>
@@ -295,6 +303,7 @@
                     </div>
                 </div>
         </form>
+        <script>let subCat_list_id = <%= product[0].subCat_list_id %></script>
         <% } else { %>
         
             <div class="alert alert-danger mt-5" role="alert">
@@ -324,3 +333,4 @@
 <script src="/lib/data_control.js"></script>
 <%- include ("layouts/footer.ejs") %>
 <%- include ("layouts/modal.ejs") %>
+<script src="/lib/product.js"></script>
