--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -82,7 +82,8 @@
 										</div>
 									</div>
 									<div class="product-body">
-										<p class="product-category"><%= product_top[i].sub_cat_name %></p>
+										<p class="product-category"><%= product_top[i].cat_name %></p>
+										<p class="product-subcat"><%= product_top[i].sub_cat_list != null ? product_top[i].sub_cat_list.replaceAll(","," | ") : "" %></p>
 										<h3 class="product-name"><a
 												href="/product/<%= product_top[i].product_id %>/details"><%= product_top[i].product_name %></a>
 										</h3>
@@ -135,7 +136,7 @@
 	<!-- container -->
 	<div class="container-fluid">
 		<!-- row -->
-		<% if (typeof(sub_category) !== 'undefined' && sub_category != null && sub_category.length > 0) { %>
+		<% if (typeof(category) !== 'undefined' && category != null && category.length > 0) { %>
 		<div class="row">
 			<div class="col-4 col-lg-4 col-sm-4 col-md-4 mobile-col row">
 				<div class=" col-12 mobile-col">
@@ -154,9 +155,9 @@
 				<div class="section-nav">
 					<ul class="section-tab-nav tab-nav">
 
-						<% for (var i = 0; i < sub_category.length; i++){ let active = ""; if (i==0) {active = "active"} %>
+						<% for (var i = 0; i < category.length; i++){ let active = ""; if (i==0) {active = "active"} %>
 						<li class="<%= active %>"><a data-toggle="tab"
-								href="#cat<%= sub_category[i].sub_cat_id %>"><%= sub_category[i].sub_cat_name %></a>
+								href="#cat<%= category[i].cat_id %>"><%= category[i].cat_name %></a>
 						</li>
 						<% } %>
 
@@ -171,8 +172,8 @@
 					
 					<div class="products-tabs">
 						<!-- tab -->
-						<% for (var i = 0; i < sub_category.length; i++){ let active = ""; if (i==0) {active = "active"}  %>
-						<div id="cat<%= sub_category[i].sub_cat_id %>" class="tab-pane <%= active  %>">
+						<% for (var i = 0; i < category.length; i++){ let active = ""; if (i==0) {active = "active"}  %>
+						<div id="cat<%= category[i].cat_id %>" class="tab-pane <%= active  %>">
 							<div id="store" class="col-md-12">
 
 								<!-- store products -->
@@ -180,13 +181,13 @@
 									
 									<div class="col-8 col-sm-8 col-lg-8 col-xs-12 mobile-col">
 										<!-- product -->
-										<% for (var j = 0; j < sub_category[i].products.length; j++) { %>
+										<% for (var j = 0; j < category[i].products.length; j++) { %>
 
 										<!-- product -->
 										<div class="col-xs-6 col-3 col-lg-4 col-sm-6 mobile-col">
 											<div class="product">
 												<div class="product-img text-center">
-													<a href="/product/<%= sub_category[i].products[j].product_id %>/details"><img src="/img/product/<%= sub_category[i].products[j].product_id %>/main.jpg"
+													<a href="/product/<%= category[i].products[j].product_id %>/details"><img src="/img/product/<%= category[i].products[j].product_id %>/main.jpg"
 														alt="literie d'amour" style=" height: 200px; padding: 0px; width: 90%;" class="img-mobile"></a>
 													<!-- <div class="product-label">
 											<span class="sale">-30%</span>
@@ -195,14 +196,14 @@
 												</div>
 												<div class="product-body">
 													<p class="product-category">
-														<%= sub_category[i].products[j].sub_cat_name %></p>
-													<!-- <a href="#"><p class="product-marque"><%= sub_category[i].products[j].brand_name %></p></a>  -->
+														<%= category[i].products[j].sub_cat_list != null ? category[i].products[j].sub_cat_list.replaceAll(","," | ") : "" %></p>
+													<!-- <a href="#"><p class="product-marque"><%= category[i].products[j].brand_name %></p></a>  -->
 													<h3 class="product-name max-lines"><a
-															href="/product/<%= sub_category[i].products[j].product_id %>/details"><%= sub_category[i].products[j].product_name %></a>
+															href="/product/<%= category[i].products[j].product_id %>/details"><%= category[i].products[j].product_name %></a>
 													</h3>
 													<h4 class="product-price">
 														<% let formating=Intl.NumberFormat('en-US') %>
-														<%= formating.format(sub_category[i].products[j].product_price)+" DA" %>
+														<%= formating.format(category[i].products[j].product_price)+" DA" %>
 													</h4>
 													<!-- <div class="product-rating">
 											<i class="fa fa-star"></i>
@@ -213,21 +214,21 @@
 										</div> -->
 													<div class="product-btns">
 														<button class="add-to-wishlist productToCart_btn"
-															idp="<%= sub_category[i].products[j].product_id %>"><i
+															idp="<%= category[i].products[j].product_id %>"><i
 																class="fa fa-shopping-cart"></i><span
 																class="tooltipp">Ajouter au panier</span></button>
-														<!-- <button class="add-to-compare" onclick="location.href='/compare/<%= sub_category[i].products[j].product_id %>'"><i
+														<!-- <button class="add-to-compare" onclick="location.href='/compare/<%= category[i].products[j].product_id %>'"><i
                                                     class="fa fa-exchange"></i><span
                                                     class="tooltipp">comparer</span></button> -->
 														<button class="quick-view"
-															onclick="location.href='/product/<%= sub_category[i].products[j].product_id %>/details'"><i
+															onclick="location.href='/product/<%= category[i].products[j].product_id %>/details'"><i
 																class="fa fa-eye"></i><span
 																class="tooltipp">Détail</span></button>
 													</div>
 												</div>
 												<div class="add-to-cart">
 													<button class="add-to-cart-btn btn-ToCheckout" 
-													idp = "<%= sub_category[i].products[j].product_id %>"><i
+													idp = "<%= category[i].products[j].product_id %>"><i
 													class="fa fa-shopping-cart mobile-none"></i> <span class="text-mobile"> Commander</span> </button>
 												</div>
 											</div>
@@ -235,17 +236,19 @@
 										<% } %>
 										<!-- /product -->
 									</div>
+
+
 									<div class="col-4 col-lg-4 col-sm-4 col-md-4 mobile-col row">
 										<div class=" col-12 mobile-col">
 											<div class="product-img text-center ">
-												<video src="./img/video/1.mp4" style="width: 100%;padding: 1%; max-width: 480px;" class="mobile-none video-mobile"
-													alt="video" autoplay controls></video>
+												<video src="./img/video/1.mp4" style="width: 100%;padding: 1%; max-width: 280px;" class="mobile-none video-mobile"
+													alt="video" autoplay muted></video>
 											</div>
 										</div>
 										<div class=" col-12 mobile-col" >
 											<div class="product-img text-center">
-												<video src="./img/video/2.mp4" style="width: 100%;padding: 1%; max-width: 480px;" class="video-mobile"
-													alt="video" autoplay controls></video>
+												<video src="./img/video/2.mp4" style="width: 100%;padding: 1%; max-width: 280px;" class="video-mobile"
+													alt="video" autoplay muted></video>
 											</div>
 										</div>
 									
