--- a/generateApp/client_app/views/product_details.ejs
+++ b/generateApp/client_app/views/product_details.ejs
@@ -120,7 +120,7 @@
 						</div>
 						<ul class="product-links">
 							<li>Categorie :</li>
-							<li><a href="#"><%= product[0].sub_cat_name %></a></li>
+							<li><a href="#"><%= product[0].cat_name %></a></li>
 							<!-- <li><a href="#">Accessories</a></li> -->
 						</ul>
 
@@ -211,7 +211,7 @@
 		<!-- section title -->
 		<div class="col-md-12">
 			<div class="section-title">
-				<h3 class="title">COLLECTION <%= product[0].sub_cat_name %> </h3>
+				<h3 class="title">COLLECTION <%= product[0].cat_name %> </h3>
 			</div>
 		</div>
 		<!-- /section title -->
@@ -236,7 +236,8 @@
 											</div>
 										</div>
 										<div class="product-body">
-											<p class="product-category"><%= product_similar[i].sub_cat_name %></p>
+											<p class="product-category"><%= product_similar[i].cat_name %></p>
+											<p class="product-subcat"><%= product_similar[i].sub_cat_list != null ? product_similar[i].sub_cat_list.replaceAll(","," | ") : "" %></p>
 											<h3 class="product-name"><a href="/product/<%= product_similar[i].product_id %>/details"><%= product_similar[i].product_name %></a></h3>
 											<h4 class="product-price">
 												<% let formating=Intl.NumberFormat('en-US') %>
