--- a/generateApp/client_app/views/products_list.ejs
+++ b/generateApp/client_app/views/products_list.ejs
@@ -78,24 +78,6 @@
 							</div>
 						</div>
 						<!-- /aside Widget -->
-<!-- aside Widget -->
-<div class="aside">
-	<h3 class="aside-title">MARQUES</h3>
-	<div class="checkbox-filter" id="brand-choice">
-		<% if (typeof(brands) !== 'undefined' && brands != null && brands.length > 0) { %>
-		<% for (var i = 0; i < brands.length; i++) { %>
-		<div class="input-checkbox">
-			<input type="checkbox" id="brand-<%= brands[i].brand_id %>" value="<%= brands[i].brand_id  %>">
-			<label for="brand-<%= brands[i].brand_id %>">
-				<span></span>
-				<%= brands[i].brand_name  %>
-				<small>(<%= brands[i].product_count %>)</small>
-			</label>
-		</div>
-		<% }} %>
-	</div>
-</div>
-<!-- /aside Widget -->
 						<!-- aside Widget -->
 						<div class="aside">
 							<button class="btn btn-success btn-lg" id="btn-filter"> Filtrer</button>
@@ -170,8 +152,8 @@
 												style="width: 100%; height: 200px; padding: 10px;">
 										</div>
 										<div class="product-body">
-											<p class="product-category"><%= products[i].sub_cat_name %></p>
-											<a href="#"><p class="product-marque"><%= products[i].brand_name %></p></a>
+											<p class="product-category"><%= products[i].cat_name %></p>
+											<p class="product-subcat"><%= products[i].sub_cat_list != null ? products[i].sub_cat_list.replaceAll(","," | ") : "" %></p>
 											<h3 class="product-name max-lines"><a href="/product/<%= products[i].product_id %>/details"><%= products[i].product_name %></a>
 											</h3>
 											<h4 class="product-price">
