--- a/generateApp/client_app/views/product_details.ejs
+++ b/generateApp/client_app/views/product_details.ejs
@@ -250,14 +250,14 @@
                                         <i class="fa fa-star"></i>
                                     </div> -->
 											<div class="product-btns">
-												<button class="add-to-wishlist productToCart_btn" idp = "<%= product_similar[i].product_id %>"><i class="fa fa-shopping-cart"></i><span class="tooltipp">Ajouter au panier</span></button>
+												<button class="add-to-wishlist productToCart_btn" idp = "<%= product_similar[i].product_id %>"><i class="fa fa-cart-plus"></i><span class="tooltipp">Ajouter au panier</span></button>
 												<!-- <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span></button> -->
 												<button class="quick-view" onclick="location.href='/product/<%= product_similar[i].product_id %>/details'"><i class="fa fa-eye"></i><span class="tooltipp">Détail</span></button>
 											</div>
+											<button class="cta-btn primary-btn" onclick="location.href='/checkout/<%= product_similar[i].product_id %>'"><i class="fa fa-shopping-cart" style="margin-right: 2px;"></i> Commander</button>
+
 										</div>
-										<div class="add-to-cart">
-											<button class="add-to-cart-btn" onclick="location.href='/checkout/<%= product_similar[i].product_id %>'"><i class="fa fa-shopping-cart"></i> Commander</button>
-										</div>
+
 									</div>
 									<!-- /product -->
 							<% }} %>
