--- a/generateApp/client_app/views/home.ejs
+++ b/generateApp/client_app/views/home.ejs
@@ -163,80 +163,6 @@
 						</ul>
 					</div>
 				</div>
-<<<<<<< HEAD
-				<div class="section-nav">
-					<ul class="section-tab-nav tab-nav">
-
-						<% for (var i = 0; i < sub_category.length; i++){ let active = ""; if (i==0) {active = "active"} %>
-						<li class="<%= active %>"><a data-toggle="tab"
-								href="#cat<%= sub_category[i].sub_cat_id %>"><%= sub_category[i].sub_cat_name %></a>
-						</li>
-						<% } %>
-
-					</ul>
-				</div>
-			</div>
-			<!-- /section title -->
-
-			<!-- Products tab & slick -->
-			<div class="col-md-12">
-				<div class="row">
-					
-					<div class="products-tabs">
-						<!-- tab -->
-						<% for (var i = 0; i < sub_category.length; i++){ let active = ""; if (i==0) {active = "active"}  %>
-						<div id="cat<%= sub_category[i].sub_cat_id %>" class="tab-pane <%= active  %>">
-							<div id="store" class="col-md-12">
-
-								<!-- store products -->
-								<div class="row">
-									
-									<div class="col-8 col-sm-8 col-lg-8 col-xs-12 mobile-col">
-										<!-- product -->
-										<% for (var j = 0; j < sub_category[i].products.length; j++) { %>
-									
-										<!-- product -->
-										<div class="col-xs-6 col-3 col-lg-4 col-sm-6 mobile-col">
-											<div class="product">
-												<div class="product-img text-center">
-													<a href="/product/<%= sub_category[i].products[j].product_id %>/details"><img src="/img/product/<%= sub_category[i].products[j].product_id %>/main.jpg"
-														alt="literie d'amour" style=" height: 200px; padding: 0px; width: 90%;" class="img-mobile"></a>
-													<!-- <div class="product-label">
-											<span class="sale">-30%</span>
-											<span class="new">NEW</span>
-										</div> -->
-												</div>
-												<div class="product-body">
-													<p class="product-category">
-														<%= sub_category[i].products[j].sub_cat_name %></p>
-													<!-- <a href="#"><p class="product-marque"><%= sub_category[i].products[j].brand_name %></p></a>  -->
-													<h3 class="product-name max-lines"><a
-															href="/product/<%= sub_category[i].products[j].product_id %>/details"><%= sub_category[i].products[j].product_name %></a>
-													</h3>
-													<h4 class="product-price">
-														<% let formating=Intl.NumberFormat('en-US') %>
-														<%= formating.format(sub_category[i].products[j].product_price)+" DA" %>
-													</h4>
-													<!-- <div class="product-rating">
-											<i class="fa fa-star"></i>
-											<i class="fa fa-star"></i>
-											<i class="fa fa-star"></i>
-											<i class="fa fa-star"></i>
-											<i class="fa fa-star"></i>
-										</div> -->
-													<div class="product-btns">
-														<button class="add-to-wishlist productToCart_btn"
-															idp="<%= sub_category[i].products[j].product_id %>"><i
-																class="fa fa-shopping-cart"></i><span
-																class="tooltipp">Ajouter au panier</span></button>
-														<!-- <button class="add-to-compare" onclick="location.href='/compare/<%= sub_category[i].products[j].product_id %>'"><i
-                                                    class="fa fa-exchange"></i><span
-                                                    class="tooltipp">comparer</span></button> -->
-														<button class="quick-view"
-															onclick="location.href='/product/<%= sub_category[i].products[j].product_id %>/details'"><i
-																class="fa fa-eye"></i><span
-																class="tooltipp">Détail</span></button>
-=======
 				<!-- /section title -->
 	
 				<!-- Products tab & slick -->
@@ -300,12 +226,7 @@
 														</div>
 														<button class="cta-btn primary-btn" 
 														idp = "<%= sub_category[i].products[j].product_id %>"><i
-<<<<<<< HEAD
 														class="fa fa-shopping-cart mobile-none" style="margin-right: 2px;"></i> <span class="text-mobile"> Commander</span> </button>
-=======
-														class="fa fa-shopping-cart mobile-none"></i> <span class="text-mobile"> Commander</span> </button>
->>>>>>> 01a7bfe5c235cb326b0e4b4669dba8b639f42b08
->>>>>>> 5f399c22ddcd9d06ca24dd77aac417b69a5a8ec6
 													</div>
 
 												</div>
@@ -319,13 +240,13 @@
 											<div class=" col-12 mobile-col">
 												<div class="product-img text-center ">
 													<video src="./img/video/1.mp4" style="width: 100%;padding: 1%; max-width: 280px;" class="mobile-none video-mobile"
-														alt="video"  muted></video>
+														alt="video" autoplay muted></video>
 												</div>
 											</div>
 											<div class=" col-12 mobile-col" >
 												<div class="product-img text-center">
 													<video src="./img/video/2.mp4" style="width: 100%;padding: 1%; max-width: 280px;" class="video-mobile"
-														alt="video"  muted></video>
+														alt="video" autoplay muted></video>
 												</div>
 											</div>
 										
