--- a/generateApp/client_app/views/products_list.ejs
+++ b/generateApp/client_app/views/products_list.ejs
@@ -170,7 +170,10 @@
 													<button class="quick-view" onclick="location.href='/product/<%= products[i].product_id %>/details'"><i class="fa fa-file"></i><span
 															class="tooltipp">Détail</span></button>
 												</div>
-												<button class="cta-btn primary-btn" idp = "<%= products[i].product_id %>"><i class="fa fa-shopping-cart mobile-none" style="margin-right: 2px;"></i> <span class="text-mobile"> Commander</span></button>
+												<a class="primary-btn cta-btn" href="/checkout/<%= products[i].product_id %>">
+													<i class="fa fa-shopping-cart" style="margin-right: 2px;"></i> 
+													Commander
+												</a>
 
 										</div>
 									</div>
