--- a/generateApp/admin_app/views/stock.ejs
+++ b/generateApp/admin_app/views/stock.ejs
@@ -8,7 +8,7 @@
                 </div>
 
                 <div class="col-auto d-flex">
-                    <a href="/product/add" class="btn btn-primary">Nouveau produits</a></div>
+                    <a href="/product/add" class="btn btn-primary">Nouveau produit</a></div>
                 </div>
 
         </div>
@@ -31,7 +31,7 @@
                         <div class="alert alert-success ms-4 me-4" role="alert">Succées.</div>
                     <% } %>    
                     <div class="sa-divider"></div>
-                    <table class="sa-datatables-init" data-order="[[ 3, &quot;deasc&quot; ]]"
+                    <table class="sa-datatables-init" data-order="[]"
                         data-sa-search-input="#table-search" id="example">
                         <thead>
                             <tr>
@@ -95,6 +95,12 @@
                                             <li><a class="dropdown-item" type="button" data-bs-target="#quantity_edit" 
                                             data-bs-toggle="modal"
                                             onclick="set_info('<%=JSON.stringify(product[i]).replace(/'/g, '`').replace(/\\n/g,' ')%>','quantity')">Nouvelle quantité</a></li>
+                                            <li>
+                                                <a class="dropdown-item" type="button"
+                                                onclick="quantity_reset('<%= product[i].product_id %>')">
+                                                    Réinitialiser le stock
+                                                </a>
+                                            </li>
                                         </ul>
                                     </div>
                         
