--- a/generateApp/admin_app/views/product_add.ejs
+++ b/generateApp/admin_app/views/product_add.ejs
@@ -1,7 +1,7 @@
 <%- include ("layouts/header.ejs") %>
 <div id="top" class="sa-app__body">
     <div class="mx-sm-2 px-2 px-sm-3 px-xxl-4 pb-6">
-        <form class="container" method="post" enctype="multipart/form-data">
+        <form class="container" method="post" id="product-form" enctype="multipart/form-data">
             <div class="py-5">
                 <div class="row g-4 align-items-center">
                     <div class="col">
@@ -249,9 +249,11 @@
                             <div class="card-body p-5">
                                 <div class="mb-5">
                                     <h2 class="mb-0 fs-exact-18">Sous-catégorie</h2>
-                                </div><select disabled class="sa-select2 form-select" multiple name="product_sub_cat">
-                                </select>
+                                </div>
+                                <select disabled class="sa-select2 form-select" multiple id="product_sub_cat"></select>
+                                <div id="subcat-selection"></div>
                             </div>
+
                         </div>
 
                         <div class="card w-100 mt-5">
@@ -304,4 +306,4 @@
 </script>
 <%- include ("layouts/footer.ejs") %>
 <%- include ("layouts/modal.ejs") %>
-<script src="/lib/product.js"></script>
+<script src="/lib/product_add.js"></script>
