--- a/generateApp/client_app/views/checkout.ejs
+++ b/generateApp/client_app/views/checkout.ejs
@@ -48,8 +48,8 @@
 						</div>
 						<div class="form-group">
 							<select class="selectpicker form-control border-0 mb-1 px-4 rounded shadow deliveryType" name="delivery_type" required>
-							<option value="1">A domicile</option>
-							<option value="2">Point de relais</option>
+								<option value="1">A domicile</option>
+								<option value="2">Point de relais</option>
 							</select>
 						</div>
 						<div class="form-group">
@@ -72,7 +72,7 @@
 					</div>
 					<!-- /Billing Details -->
 					<% if (!session.privid) { %>
-					<button type="submit" value="1" name="othersCheckout" class="primary-btn order-submit" style="width: 100%; margin-bottom: 15px;">Ajouter d'autre produit</button>
+						<button type="submit" value="1" name="othersCheckout" class="primary-btn order-submit" style="width: 100%; margin-bottom: 15px;">Ajouter d'autre produit</button>
 					<%}%>
 					<button type="submit" class="primary-btn order-submit" style="width: 100%;">Commander</button>
 					<!-- Shiping Details -->
@@ -99,6 +99,15 @@
 							<div><strong>PRODUIT</strong></div>
 							<div><%= product[0].product_name %></div>
 						</div>
+						<% if (typeof(product[0].product_sub_cat_name) !== 'undefined' && product[0].product_sub_cat_name != null) { %>
+
+							<div class="order-col">
+								<div><strong>Sous catégorie</strong></div>
+								<div><%= product[0].product_sub_cat_name %></div>
+							</div>
+
+						<%}%>
+
 						<div class="order-products">
 							<div class="order-col">
 								<div><strong>TOTAL</strong></div>
